commit to deploy project

--- a/src/app/contact/contact.html
+++ b/src/app/contact/contact.html
@@ -44,7 +44,7 @@
               dark:from-gray-800 dark:to-gray-800
                   text-gray-700 dark:text-gray-300 transition">
         <h3 class="font-semibold text-xl text-[#2563EB] mb-2">Phone</h3>
-        <p>+234 812 345 6789</p>
+        <p>+234 9153258164</p>
       </div>
     </div>
 
@@ -53,22 +53,23 @@
                 bg-gradient-to-r from-indigo-50 to-indigo-100 
                dark:from-gray-800 dark:to-gray-800
                 text-gray-700 dark:text-gray-300 transition">
-      <form action="#" method="POST" class="space-y-6">
+      <form   action="https://formspree.io/f/mandlbje"
+  method="POST"  class="space-y-6">
         <div>
           <label class="block mb-2 text-sm font-medium">Name</label>
-          <input type="text" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
+          <input  type="text" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
                  bg-white/70 dark:bg-gray-900/50 text-gray-900 dark:text-gray-200
                  focus:ring-[#2563EB] focus:border-[#2563EB] p-3 outline-none" />
         </div>
         <div>
           <label class="block mb-2 text-sm font-medium">Email</label>
-          <input type="email" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
+          <input  type="email" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
                  bg-white/70 dark:bg-gray-900/50 text-gray-900 dark:text-gray-200
                  focus:ring-[#2563EB] focus:border-[#2563EB] p-3 outline-none" />
         </div>
         <div>
           <label class="block mb-2 text-sm font-medium">Message</label>
-          <textarea rows="5" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
+          <textarea  rows="5" class="w-full rounded-xl border-gray-300 dark:border-gray-700 
                     bg-white/70 dark:bg-gray-900/50 text-gray-900 dark:text-gray-200
                     focus:ring-[#2563EB] focus:border-[#2563EB] p-3 outline-none"></textarea>
         </div>
@@ -77,6 +78,8 @@
           Send Message
         </button>
       </form>
+      
+
     </div>
 
   </div>
