--- a/src/app/skills/skills.html
+++ b/src/app/skills/skills.html
@@ -43,6 +43,8 @@
         <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">Angular</span>
         <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">JavaScript</span>
         <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">TypeScript</span>
+        <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">Ionic</span>
+
       </div>
     </div>
 
@@ -54,7 +56,6 @@
       </p>
       <div class="flex flex-wrap gap-2">
         <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">Firebase</span>
-        <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">Firebase Studio</span>
       </div>
     </div>
 
@@ -66,6 +67,8 @@
       </p>
       <div class="flex flex-wrap gap-2">
         <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">GitHub</span>
+        <span class="px-3 py-1 bg-[#2563EB] text-white text-sm rounded-lg">Firebase Studio</span>
+
       </div>
     </div>
 
