--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,5 +1,5 @@
 <header class="fixed navbr  transition-transform duration-700 ease-in-out w-[full]  h-16  z-50  right-0 left-0 flex flex-row justify-between items-center px-10 bg-white dark:bg-gray-900  " [class.-translate-y-full]="isHidden" >
-    <div class="w-[20%] h-[80%] flex items-center justify-center ">
+    <div class="w-[20%] h-[80%] flex items-center justify-center  tiny:pl-2 sm:pl-10 xs:pl-10 md:pl-0 lg:pl-0 xl:pl-0 2xl:pl-0 ">
         <div class="logo  items-center justify-center flex w-fit h-[100%] px-3 skew-x-[-20deg]">
             <span class=" ll font-bold text-2xl text-gray-900 dark:text-white  ">
                 Tommy<span class="text-[#2563EB]">Dev23 </span> 
@@ -86,7 +86,7 @@
     <ul class="space-y-4">
       <li class="rot">
         <a  routerLink="/" fragment="hero" routerLinkActive="guy" [routerLinkActiveOptions]="{exact: false}" class="flex items-center gap-3 text-gray-800 dark:text-gray-200 hover:text-[#2563EB] transition">
-          <lucide-icon [img]="User" class="w-5 h-5"></lucide-icon>
+          <lucide-icon [img]="home" class="w-5 h-5"></lucide-icon>
           <span>Home</span>
         </a>
       </li>
