--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -13,7 +13,7 @@
       
       <!-- Nav Links -->
       <div class="flex justify-center sm:justify-start lg:justify-center gap-6">
-        <a href="#projects" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">Projects</a>
+        <a href="#project" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">Projects</a>
         <a href="#about" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">About</a>
         <a href="#contact" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">Contact</a>
       </div>
@@ -21,7 +21,7 @@
       <!-- Social Links -->
       <div class="flex justify-center sm:justify-end gap-5">
         <!-- GitHub -->
-        <a href="https://github.com/" target="_blank" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
+        <a href="https://github.com/Tomiwadev23" target="_blank" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M12 2C6.48 2 2 6.48 2 12c0 4.42 
@@ -40,7 +40,7 @@
         </a>
 
         <!-- LinkedIn -->
-        <a href="https://linkedin.com/" target="_blank" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
+        <a href="https://linkedin.com/in/omoniyi-tomiwa-636a22382/" target="_blank"   rel="noopener noreferrer" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 
@@ -58,7 +58,7 @@
         </a>
 
         <!-- Twitter -->
-        <a href="https://twitter.com/" target="_blank" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
+        <a href="https://twitter.com/Tommyace231" target="_blank" class="text-gray-700 dark:text-gray-300 hover:text-[#2563EB] transition">
           <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24">
             <path
               d="M23.954 4.569c-.885.389-1.83.654-2.825.775 
