--- a/src/app/project-dialog/project-dialog.html
+++ b/src/app/project-dialog/project-dialog.html
@@ -1,4 +1,4 @@
-<div class="p-6 bg-white dark:bg-gray-900 rounded-2xl">
+<div class="p-6 dark:bg-gray-900 ">
   <h2 class="text-2xl font-bold text-gray-900 dark:text-gray-100 mb-4">
     {{ project?.name }}
   </h2>
